# hybittech.github.io

./: .editorconfig  .gitignore  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ENGINEERING_STANDARD.md  LICENSE  Makefile  README.md  SECURITY.md  hcvm.py  hm28.rom  index.html  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  run_csgi_latin.py  setup_structure.py
.github/workflows/: deploy_gui.yml  test.yml
assets/: index-BYQcAMCm.js  index-BiXdziCk.js  index-C9F0PlRg.js  index-Cp5PfbWL.js  index-D32CU9jR.css  index-Df8mtA1Z.css  index-pGwLsA1B.css
data/: hm28.csv  hm28.json  hm28_manifest.json
data/csgi_output/: summary.json
docs/: ARCHITECTURE.md  CHANGELOG.md  CSGI_SPEC.md  HC18DC_FORMAT.md  HC_LANGUAGE_SPEC.md  HISA_SPEC.md  ORIGIN_PROTOCOL.md  csgi_algorithm_spec.md  har_spec.md  hbc_format.md  hc_language.md  hcvm_spec.md  hgeo_format.md  hisab_spec.md  hybit_pipeline_spec.md  release_policy.md
examples/: banking_integrity.hc  five_fields_demo.hc  hello.hc  iot_guard.hc  string_comparison.hc
hom-gui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
hom-gui/src/: App.jsx  index.css
release/HL-18E-v1.0/: CERTIFICATE.json  MANIFEST.json  PATENT_RELEASE.md  RELEASE_NOTES.md
rtl/: README.md  hcpu_controller.v  hcpu_dataram.v  hcpu_decode.v  hcpu_execute.v  hcpu_fetch.v  hcpu_forward.v  hcpu_guard.v  hcpu_hisab.v  hcpu_memory.v  hcpu_mul.v  hcpu_pkg.vh  hcpu_regfile.v  hcpu_rom.v  hcpu_top.v
rtl/docs/: Hybit Architecture (HCPU).md
rtl/mpw/: MPW_SHUTTLE_PLAN.md  Makefile  config.json  hcpu_firmware.h  hcpu_mpw_top.v  (+4 more)
tests/: conftest.py
tools/: benchmark.py  codex_calculator.py  csgi_pipeline.py  rom_generator.py  table_verifier.py
(+236 files in other folders)
