[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hijaiyyah-hom"
version = "1.0.0"
description = "Hijaiyyah Operating Machine — Core Computational System"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.11"
authors = [
    {name = "Firman Arief Hidayatullah"},
    {name = "Hijaiyyah Mathematics Computational Laboratory (HMCL)"},
]
keywords = [
    "hijaiyyah", "mathematics", "codex", "hybit",
    "discrete-geometry", "formal-verification",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpy>=1.24",
    "networkx>=3.0",
    "pillow>=10.0",
    "scipy>=1.10",
]

[project.scripts]
hom = "hijaiyyah.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
include = ["src", "tests", "tools", "scripts"]
extraPaths = ["src"]
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingModuleSource = false
pythonVersion = "3.11"
executionEnvironments = [
    { root = ".", extraPaths = ["src"] }
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
